add errorprone demo files