@@ -8,19 +8,6 @@ plugins {
 	id 'java'
 }
 
-//compileJava {
-//	options.compilerArgs << '--add-exports jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED'
-//	<< '--add-exports jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED'
-//			<< '--add-exports jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED'
-//			<< '--add-exports jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED'
-//			<< '--add-exports jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
-//			<< '--add-exports jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
-//			<< '--add-exports jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
-//			<< '--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED'
-//			<< '--add-opens jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
-//			<< '--add-opens jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED'
-//}
-
 group = 'uk.co.cjolive'
 version = '0.0.1-SNAPSHOT'
 
